# Federated-Learning-in-MCC

./: .gitignore  build.gradle.kts  readme.md  settings.gradle.kts
OCR/: example-request-body.json  readme.md  traficGenerator.js
OCR/info-server/: index.js  package-lock.json
OCR/infra/: autoscaler.yaml  depl.yaml  federate_job.yaml
OCR/proxy/: Dockerfile  index.js  package-lock.json  package.json
app/: build.gradle.kts
app/src/androidTest/java/com/agh/federatedlearninginmcc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cloud_computation_time.tflite  cloud_time.tflite  cloud_transmission_time.tflite  local_time.tflite  model.tflite
app/src/main/res/layout/: activity_main.xml  fragment_ocr.xml  fragment_training.xml
app/src/main/res/navigation/: nav_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
dataset/: README.md  preprocess.py
federated_learning/: .gitignore  Dockerfile  README.md  build_and_push.sh  docker_run_server.sh  federate_server.py  model_testing.py  models.py  requirements.txt  res.ipynb  tflite_model_utils.py  tflite_model_wrapper.py
federated_learning/fmnist_testing/: fmnist_federated_client.py  model.py
gradle/wrapper/: gradle-wrapper.properties
protos/src/main/proto/io.grpc.examples/flower/: BUILD.bazel  transport.proto
server/: .gitignore  README.md  federate.py  model.py
server/fmnist_testing/: fmnist_federated_client.py
stub-android/: build.gradle.kts
stub-lite/: build.gradle.kts
(+37 files in other folders)
