load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "transport_proto",
    srcs = ["transport.proto"],
)

java_proto_library(
    name = "transport_java_proto",
    deps = [":transport_proto"],
)

java_lite_proto_library(
    name = "transport_java_proto_lite",
    deps = [":transport_proto"],
)

kt_jvm_proto_library(
    name = "transport_kt_proto",
    deps = [":transport_proto"],
)

kt_jvm_grpc_library(
    name = "transport_kt_grpc",
    srcs = [":transport_proto"],
    deps = [":transport_java_proto"],
)

kt_jvm_grpc_library(
    name = "transport_kt_grpc_lite",
    srcs = [":transport_proto"],
    flavor = "lite",
    deps = [":transport_java_proto_lite"],
)
